# ansible-role-grafyaml

./: .gitreview  .zuul.yaml  README.md  README.rst  setup.cfg
defaults/: main.yaml
doc/source/: conf.py
meta/: main.yml
tasks/: install.yaml
tasks/install/: git.yaml  pip.yaml
tests/: test.yaml
vars/: Debian.yaml  RedHat.yaml
